# Seismo

./: .gitignore  CLAUDE.md  README.md
app/backend/: .env.example  pyproject.toml
app/backend/app/: main.py  settings.py
app/backend/app/models/: opensees.py  result.py  scenario.py  site.py  structure.py  terrain.py
app/backend/app/routers/: health.py  scenarios.py  simulate.py  sites.py  terrain.py
app/backend/app/services/: data_loader.py  hazard.py  opensees_client.py  opensees_request.py  scoring.py  terrain_fetch.py
app/backend/app/simulation/: analytical_sdof.py  opensees_adapter.py
app/backend/tests/: conftest.py  test_data_loader_raw_trace.py  test_health.py  test_opensees_request.py  test_scenarios.py  test_simulate_opensees.py  test_terrain.py  test_trace_provenance.py
app/frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
app/frontend/scripts/: test-collapse-trigger.ts
app/frontend/src/: App.tsx  index.css  main.tsx
config/: data_paths.example.json
data/raw/scripps_rom/: seismogram_rom_demo.ipynb
data/retrofit/: step_01.json
data/scenarios/: _catalog.json  demo_high.json  demo_low.json  demo_mid.json
docs/: ARCHITECTURE.md  DATA_LAYOUT.md  IMPLEMENTATION_PLAN.md
prompts/: INITIAL_PROMPT.md
scripts/: check_data_layout.py  extract_demo_scenarios.py  generate_synthetic_metadata.py  preprocess_rom.py  requirements.txt
scripts/rl/: __init__.py  env_config.json  heuristic.py  smoke_test.py
scripts/rl/tests/: test_env_step1.py
(+22 files in other folders)
